--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,10 @@ description: > # this means to ignore newlines until "baseurl:"
   Block Attack - Rise of the Blocks is a puzzle/blockfall game inspired by Tetris Attack for the SNES. 
   The game is pretty action packed for a puzzle game :-)
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://blockattack.sf.net" # the base hostname & protocol for your site
+url: "http://blockattack.sourceforge.net" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+
+gems:
+  - jekyll-sitemap
