--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   The game is pretty action packed for a puzzle game :-)
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.blockattack.net" # the base hostname & protocol for your site
+github_username: blockattack
 
 # Build settings
 markdown: kramdown
