--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Block Attack - Rise of the Blocks is a puzzle/blockfall game inspired by Tetris Attack (Panel de Pon in Japan) for the SNES.
   The game is pretty action packed for a puzzle game :-)
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.blockattack.net" # the base hostname & protocol for your site
+url: "https://blockattack.net" # the base hostname & protocol for your site
 github_username: blockattack
 permalink: /:year/:month/:day/:title.html
 
